<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/errorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/infoHashTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:text="@string/info_hash"
        app:layout_constraintTop_toBottomOf="@+id/errorTextView"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/magnetLinkTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/magnet_link"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoHashTextView" />

    <TextView
        android:id="@+id/filesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:text="@string/files"
        app:layout_constraintTop_toBottomOf="@+id/magnetLinkTextView"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/downloadedBytesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:text="@string/downloaded_bytes"
        app:layout_constraintTop_toBottomOf="@+id/filesTextView"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/watchTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:text="@string/watch_time"
        app:layout_constraintTop_toBottomOf="@+id/downloadedBytesTextView"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/hopCountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:text="@string/hop_count"
        app:layout_constraintTop_toBottomOf="@+id/watchTimeTextView"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/watchedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:text="@string/watched"
        app:layout_constraintTop_toBottomOf="@+id/hopCountTextView"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/durationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:text="@string/duration"
        app:layout_constraintTop_toBottomOf="@+id/watchedTextView"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/likesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:text="@string/likes"
        app:layout_constraintTop_toBottomOf="@+id/durationTextView"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/timesSeenTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:text="@string/times_seen"
        app:layout_constraintTop_toBottomOf="@+id/likesTextView"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/uploadDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:text="@string/upload_date"
        app:layout_constraintTop_toBottomOf="@+id/timesSeenTextView"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
