<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/estimatedNetworkSizeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:textSize="14sp"
        android:text="@string/estimated_network_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/nbConnectedPeersTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:text="@string/nb_connected_peers"
        app:layout_constraintTop_toBottomOf="@+id/estimatedNetworkSizeTextView"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/listConnectedPeersTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/list_connected_peers"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nbConnectedPeersTextView" />

    <TextView
        android:id="@+id/top3LeechingTorrentsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:text="@string/top_3_leeching_torrents"
        app:layout_constraintTop_toBottomOf="@+id/listConnectedPeersTextView"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/top3SeedingTorrentsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:text="@string/top_3_seeding_torrents"
        app:layout_constraintTop_toBottomOf="@+id/top3LeechingTorrentsTextView"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/seedingStatusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:text="@string/seeding_status"
        app:layout_constraintTop_toBottomOf="@+id/top3SeedingTorrentsTextView"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/walletTokensTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:text="@string/wallet_tokens"
        app:layout_constraintTop_toBottomOf="@+id/seedingStatusTextView"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/peerIdTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:text="@string/peer_id"
        app:layout_constraintTop_toBottomOf="@+id/walletTokensTextView"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
